fix: maven package lifecycle