@@ -4,17 +4,81 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>seu.gorup.id</groupId>
-    <artifactId>ArtifactId</artifactId>
-    <version>1.0-SNAPSHOT</version>
+    <groupId>io.jurai</groupId>
+    <artifactId>JurAI</artifactId>
+    <version>0.0.1</version>
 
     <properties>
+        <native.maven.plugin.version>0.9.12</native.maven.plugin.version>
         <maven.compiler.source>22</maven.compiler.source>
         <maven.compiler.target>22</maven.compiler.target>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <javafx.version>22</javafx.version>
         <javafx.maven.plugin.version>0.0.8</javafx.maven.plugin.version>
+        <mainClass>io.jurai.Launcher</mainClass>
+        <buildDirectory>${project.basedir}/target</buildDirectory>
+        <jpackageInputDir>${buildDirectory}/jpackage_inputdir</jpackageInputDir>
+        <jpackageOutputDir>${buildDirectory}/jpackage_outputdir</jpackageOutputDir>
+        <appModule>${project.basedir}</appModule>
+
     </properties>
+
+    <!-- OS-specific configs for JPackage -->
+    <profiles>
+        <profile>
+            <id>mac</id>
+            <activation>
+                <os>
+                    <family>mac</family>
+                </os>
+            </activation>
+            <build>
+                <plugins>
+                    <plugin>
+                        <groupId>org.panteleyev</groupId>
+                        <artifactId>jpackage-maven-plugin</artifactId>
+                        <configuration>
+                            <icon>${appModule}/src/main/resources/img/icon.png</icon>
+                        </configuration>
+                    </plugin>
+                </plugins>
+            </build>
+        </profile>
+
+        <profile>
+            <id>windows</id>
+            <build>
+                <plugins>
+                    <plugin>
+                        <groupId>org.panteleyev</groupId>
+                        <artifactId>jpackage-maven-plugin</artifactId>
+                        <configuration>
+                            <icon>${appModule}/src/main/resources/img/icon.png</icon>
+                            <winMenu>true</winMenu>
+                            <type>MSI</type>
+                        </configuration>
+                    </plugin>
+                </plugins>
+            </build>
+        </profile>
+
+        <profile>
+            <id>linux</id>
+
+            <build>
+                <plugins>
+                    <plugin>
+                        <groupId>org.panteleyev</groupId>
+                        <artifactId>jpackage-maven-plugin</artifactId>
+                        <configuration>
+                            <type>APP_IMAGE</type>
+                            <icon>${appModule}/src/main/resources/img/icon.png</icon>
+                        </configuration>
+                    </plugin>
+                </plugins>
+            </build>
+        </profile>
+    </profiles>
 
     <dependencies>
         <dependency>
@@ -27,18 +91,37 @@
     <build>
         <plugins>
             <plugin>
+                <groupId>org.codehaus.mojo</groupId>
+                <artifactId>exec-maven-plugin</artifactId>
+                <version>3.0.0</version>
+                <executions>
+                    <execution>
+                        <id>java</id>
+                        <goals>
+                            <goal>java</goal>
+                        </goals>
+                        <configuration>
+                            <mainClass>io.jurai.Launcher</mainClass>
+                        </configuration>
+                    </execution>
+                </executions>
+            </plugin>
+
+            <plugin>
                 <groupId>org.openjfx</groupId>
                 <artifactId>javafx-maven-plugin</artifactId>
                 <version>0.0.8</version>
                 <configuration>
-                    <mainClass>Launcher</mainClass>
+                    <mainClass>io.jurai.Launcher</mainClass>
                 </configuration>
             </plugin>
             <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
                 <version>3.8.0</version>
                 <configuration>
-                    <release>21</release>
+                    <source>22</source>
+                    <target>22</target>
                 </configuration>
             </plugin>
             <plugin>
@@ -49,7 +132,7 @@
                     <archive>
                         <manifest>
                             <addClasspath>true</addClasspath>
-                            <mainClass>Launcher</mainClass>
+                            <mainClass>io.jurai.Launcher</mainClass>
                         </manifest>
                     </archive>
                 </configuration>
@@ -64,7 +147,7 @@
                     <archive>
                         <manifest>
                             <addClasspath>true</addClasspath>
-                            <mainClass>Launcher</mainClass>
+                            <mainClass>io.jurai.Launcher</mainClass>
                         </manifest>
                     </archive>
                 </configuration>
@@ -78,15 +161,54 @@
                     </execution>
                 </executions>
             </plugin>
+
+            <!-- Plugin to create JPackage directories -->
             <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-compiler-plugin</artifactId>
+                <artifactId>maven-antrun-plugin</artifactId>
+                <version>3.0.0</version>
+                <executions>
+                    <execution>
+                        <id>create-dirs</id>
+                        <phase>validate</phase> <!-- Run in the validate phase -->
+                        <goals>
+                            <goal>run</goal>
+                        </goals>
+                        <configuration>
+                            <target>
+                                <!-- Create jpackage_inputdir if it doesn't exist -->
+                                <mkdir dir="${jpackageInputDir}"/>
+                                <!-- Create jpackage_outputdir if it doesn't exist -->
+                                <mkdir dir="${jpackageOutputDir}"/>
+                            </target>
+                        </configuration>
+                    </execution>
+                </executions>
+            </plugin>
+
+            <!-- JPackage -->
+            <plugin>
+                <groupId>org.panteleyev</groupId>
+                <artifactId>jpackage-maven-plugin</artifactId>
+                <version>1.6.5</version>
+
                 <configuration>
-                    <source>22</source>
-                    <target>22</target>
+                    <name>JurAI</name>
+                    <appVersion>${project.version}</appVersion>
+                    <vendor>io.jurai</vendor>
+                    <mainClass>${mainClass}</mainClass>
+                    <input>${jpackageInputDir}</input>
+                    <mainJar>${buildDirectory}/${project.artifactId}-${project.version}-jar-with-dependencies.jar</mainJar>
+                    <destination>${jpackageOutputDir}</destination>
+                    <javaOptions>
+                        <option>--enable-preview</option>
+                        <option>-Dfile.encoding=UTF-8</option>
+                    </javaOptions>
                 </configuration>
             </plugin>
         </plugins>
     </build>
+
+
+
 
 </project>
